--- a/Styles/index.css
+++ b/Styles/index.css
@@ -1,39 +1,15 @@
-* {
-    color: #576574;
-}
-
-body,
-html {
-    height: 100%;
-    margin: auto;
-}
-
-nav {
-    position: absolute;
-}
-
-.nav-element {
+#content {
+    font-size: 3.7vw;
+    text-align: center;
     position: relative;
-    padding-left: 3vw;
-    top: 1.5vw;
-    font-size: 2vw;
-    z-index: 1;
+    top: 20%;
+}
+
+#longer-summary {
+    font-size: 2.3vw;
+    margin-top: 500px;
+    height: 650px;
+    text-align: center;
+    position: relative;
     text-decoration: none;
-}
-
-a:hover {
-    cursor: pointer;
-    color: tomato;
-}
-
-body {
-    background-image: url("../Images/background.jpg");
-
-    position: relative;
-    height: 100%;
-    width: auto;
-
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
 }
